welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:50: error: Unmatched closing brace '}' ignored here
}
^